tests/NormalTests/paczka1/fuzzy1/62183888.err
Error in line 1: S240 S901 95,94
Error in line 5: 95ek7sgX7n S437 70,7
Error in line 7: ct7vT S437 59,9
Error in line 22: 95ek7sgX7n S240 11,4
